--- a/index.html
+++ b/index.html
@@ -262,5 +262,5 @@ var buttonText = new WordShuffler(shuffler,{
 height:10px;
 position:absolute;
 right:70px;
-bottom:120px;"><h2><a href="https://dbateyko.me/">?</a></h2></div>
+bottom:120px;"><h2><a href="https://github.com/dbateyko/Moscow-Rules">?</a></h2></div>
 <!-- based on Random Text Shuffle. https://codepen.io/SaschaSigl/pen/woGYKJ -->
