--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </article>
 </body>
 <script>
-var quotes = ["Assume Nothing","Never go against your gut.", "Everyone is potentially under opposition control.", "Do not look back; you are never completely alone.", "Go with the flow, blend in.", "Vary your pattern and stay within your cover.", "Lull them into a sense of complancency.", "Do not harass the opposition.", "Pick the time and place for action.", "Keep your options open.", "Murphy is right.", "Never go against your gut; it is your operational antenna."]
+var quotes = ["Vary your pattern and stay within your cover.", "Pick the time and place for action.", "Keep your options open.", "Maintain a natural pace", "Technology will always let you down", "Once is an accident. Twice is a coincidence. Three times is an enemy action.", "Avoid static lookouts; stay away from chokepoints where they can reacquire you.", "Select a meeting site so you can overlook the scene.", "Only approach the site when you are sure it is clean.", "Be aware of surveillance's time tolerance so they aren't forced to raise an alert.", "Let them believe they lost you; act innocent.", "There is no limit to a human being's ability to rationalize the truth.", "Use misdirection, illusion, and deception.", "Assume Nothing.","Never go against your gut.", "Everyone is potentially under opposition control.", "Do not look back; you are never completely alone.", "Go with the flow, blend in.", "Vary your pattern and stay within your cover.", "Lull them into a sense of complancency.", "Do not harass the opposition.", "Pick the time and place for action.", "Keep your options open.", "Murphy is right.", "Never go against your gut; it is your operational antenna."]
 	 var index = 0;
 
 	 function updateQuote() {
